--- a/03-rentx/package.json
+++ b/03-rentx/package.json
@@ -15,15 +15,17 @@
     "dayjs": "^1.10.5",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
+    "nodemailer": "^6.6.3",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
+    "supertest": "^6.1.3",
     "swagger-ui-express": "^4.1.6",
     "tsyringe": "^4.5.0",
     "typeorm": "^0.2.32",
-    "uuid": "^8.3.2",
-    "supertest": "^6.1.3"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -31,6 +33,7 @@
     "@types/jest": "^26.0.23",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/multer": "^1.4.5",
+    "@types/nodemailer": "^6.4.4",
     "@types/supertest": "^2.0.11",
     "@types/swagger-ui-express": "^4.1.2",
     "@types/uuid": "^8.3.0",
@@ -44,7 +47,7 @@
     "eslint-plugin-import-helpers": "^1.1.0",
     "eslint-plugin-prettier": "^3.4.0",
     "jest": "^27.0.4",
-    "prettier": "^2.3.0",    
+    "prettier": "^2.3.0",
     "ts-jest": "^27.0.3",
     "ts-node-dev": "^1.1.6",
     "tsconfig-paths": "^3.9.0",
