Implementing AWS SES as mail provider

--- a/03-rentx/.env
+++ b/03-rentx/.env
@@ -1,1 +1,17 @@
+## API URLs
 FORGOT_MAIL_URL=http://localhost:3333/password/reset?token=
+APP_API_URL=http://localhost:3333
+
+# AWS Credentials
+AWS_ACCESS_KEY_ID=AKIA6NFWATRCDTAV6SH2
+AWS_SECRET_ACCESS_KEY=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
+AWS_BUCKET=api-rentx50
+AWS_BUCKET_REGION=sa-east-1
+AWS_BUCKET_URL=https://api-rentx50.s3.amazonaws.com
+AWS_REGION=us-east-1
+
+## Storage
+disk=s3
+
+## Email
+MAIL_PROVIDER=ethereal
