--- a/03-rentx/.env.example
+++ b/03-rentx/.env.example
@@ -11,7 +11,7 @@ AWS_BUCKET_URL=
 AWS_REGION=
 
 ## Storage (s3 or local)
-disk=
+disk=local
 
 ## Email (ses or ethereal)
-MAIL_PROVIDER=
+MAIL_PROVIDER=ethereal
