--- a/03-rentx/.gitignore
+++ b/03-rentx/.gitignore
@@ -3,14 +3,18 @@
 # dependencies
 /node_modules
 /.pnp
+.vscode
+tmp/*
+!tmp/.gitkeep
+ormconfig.json
 .pnp.js
-dist
 
 # testing
 /coverage
 
 # production
 /build
+/dist
 
 # misc
 .DS_Store
@@ -23,6 +27,3 @@ dist
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-
-
