--- a/03-rentx/package.json
+++ b/03-rentx/package.json
@@ -14,6 +14,7 @@
     "aws-sdk": "^2.958.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.4.0",
+    "cors": "^2.8.5",
     "csv-parse": "^4.15.4",
     "dayjs": "^1.10.5",
     "dotenv": "^10.0.0",
@@ -40,6 +41,7 @@
     "@babel/preset-env": "^7.14.9",
     "@babel/preset-typescript": "^7.14.5",
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.23",
     "@types/jsonwebtoken": "^8.5.1",
