Implementing Rate limiter and Sentry

--- a/03-rentx/.env.example
+++ b/03-rentx/.env.example
@@ -15,3 +15,9 @@ disk=local
 
 ## Email (ses or ethereal)
 MAIL_PROVIDER=ethereal
+
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+
+SENTRY_DNS=
